--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tetris</title>
+  <link rel="preload" href="./assets/img/tetris-bg.jpg" as="image">
   <link rel="stylesheet" href="./assets/css/styles.css">
-  <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
   <div id="score"></div>
   <canvas id="canvas" width="240" height="400"></canvas>
+
+  <script src="./assets/js/script.js" defer></script>
 </body>
 </html>
